:bento: Change to volo version

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 </div>
 <article id="content" class="container">
     <div class="intro">
-        <h1>Was schätzen Sie: Wie hat sich NRW unter Hannelore Kraft verändert?</h1>
-        <p>Am 14. Mai wird in Nordrhein-Westfalen gewählt. Wie hat sich das Bundesland in den fünf Regierungsjahren
-            von Ministerpräsidentin Hannelore Kraft (SPD) verändert?</p>
+        <h1>Was schätzen Sie: Wie hat sich NRW unter Hannelore Kraft verändert - Reloaded</h1>
+        <p>Am 14. Mai wurde in Nordrhein-Westfalen gewählt. Aus Gründen schauen wir hier noch mal zurück:
+          Wie hat sich das Bundesland in den fünf Regierungsjahren von Ministerpräsidentin Hannelore Kraft (SPD) verändert?</p>
         <p><b><a href="http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-erklaerstueck-100.html">Zeichnen Sie die Linie zu Ende. Sie können die Kurve danach noch anpassen. Ein Klick auf den Button unter der Grafik verrät, ob Sie richtig lagen.</a></b></p>
     </div>
 
