:bento: Add new authors

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     <div class="credits">
         <h3>Credits:</h3>
 
-        <p>Von Patricia Ennenbach und Peter Schneider</p>
+        <p>Markus Meyer-Gehlen, Lucie Jäckels, Marlon Schulte,
+          Kevin Barth, Robin Schäfer, Gian-Luca Delbach, Nora Wanzke,
+        Steffi Delfs</p>
         <p>Umsetzung: Marcus Weiner, Patricia Ennenbach</p>
-        <p>Redaktion: Rainer Kellers</p>
+        <p>Redaktion: Christina Elmer</p>
         <p>Design: Mirko Schweikert</p>
 
         <h3>Quellen:</h3>
