:bento: no link in data

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="credits">
         <h3>Credits:</h3>
 
-        <p>Markus Meyer-Gehlen, Lucie Jäckels, Marlon Schulte,
+        <p>Von Markus Meyer-Gehlen, Lucie Jäckels, Marlon Schulte,
           Kevin Barth, Robin Schäfer, Gian-Luca Delbach, Nora Wanzke,
         Steffi Delfs</p>
         <p>Umsetzung: Marcus Weiner, Patricia Ennenbach</p>
