--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 </div>
 <article id="content" class="container">
     <div class="intro">
-        <h1>Was schätzen Sie: Wie hat sich NRW unter Hannelore Kraft verändert - Reloaded</h1>
-        <p>Am 14. Mai wurde in Nordrhein-Westfalen gewählt. Aus Gründen schauen wir hier noch mal zurück:
-          Wie hat sich das Bundesland in den fünf Regierungsjahren von Ministerpräsidentin Hannelore Kraft (SPD) verändert?</p>
+        <h1>Schätzen Sie weiter: Wie hat sich NRW unter Hannelore Kraft verändert</h1>
+        <p>Am 14. Mai wurde in Nordrhein-Westfalen gewählt.
+          Dazu hat der WDR ein interaktives Datenprojekt veröffentlicht:
+          <a href="http://data.wdr.de/wdr/nachrichten/landespolitik/landtagswahl/was-schaetzen-sie/">Was schätzen Sie?</a>
+          Mit den WDR-Volontären haben wir das Projekt mit neuen Daten befüllt: Wie hat sich das Bundesland in den fünf Regierungsjahren von Ministerpräsidentin Hannelore Kraft (SPD) verändert?</p>
         <p><b><a href="http://www1.wdr.de/nachrichten/landespolitik/landtagswahl/wss-erklaerstueck-100.html">Zeichnen Sie die Linie zu Ende. Sie können die Kurve danach noch anpassen. Ein Klick auf den Button unter der Grafik verrät, ob Sie richtig lagen.</a></b></p>
     </div>
 
@@ -81,15 +83,17 @@
 
         <h3>Quellen:</h3>
 
-        <h4>Arbeitslosenquote:</h4>
-        <a href="https://www.landesdatenbank.nrw.de/">Landesdatenbank-NRW: Arbeitsmarktstatistik der Bundesagentur für Arbeit, Deep-Link nicht möglich.</a>
+        <h4>Ehescheidungen:</h4>
+        <a href="">Quelle: </a>
 
-        <h4>Jugendarmut:</h4>
-        <a href="http://www.sozialberichte.nrw.de/sozialindikatoren_nrw/indikatoren/7_einkommensarmut/indikator7_7/Indikator_7_7_NRW_2011-2015.xlsx">Sozialberichte NRW, SGB-II-Quote der unter 15-Jährigen 2011-2015, xlsx</a></p>
-        <a href="http://www.sozialberichte.nrw.de/sozialindikatoren_nrw/indikatoren/7_einkommensarmut/indikator7_7/Indikator_7_7_NRW_2007-2010.xlsx">Sozialberichte NRW, SGB-II-Quote der unter 15-Jährigen 2007-2010, xlsx</a>
+        <h4>Landwirtschaft:</h4>
+        <a href="">Quelle: </a></p>
 
-        <h4>U3-Betreuung:</h4>
-        <p>Ergebnisse der Kinder- und Jugendhilfestatistik Nordrhein-Westfalen, auf Anfrage.</p>
+        <h4>Insolvenzen:</h4>
+        <p>Quelle: </p>
+
+        <h4>Studienanfänger:</h4>
+        <p>Quelle: </p>
 
         <h3>Credits:</h3>
 
